infra/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rooms-api
    tier: front
  name: rooms-api
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rooms-api
